obnam (1.10-1) UNRELEASED; urgency=medium

  * New upstream version.
    * Fix "restore to /tmp messes up directory perms" by preventing
      restores to a non-empty directory. (Closes: #760492)
  * Add build-dependency on git.

 -- Lars Wirzenius <liw@liw.fi>  Sat, 13 Jun 2015 09:34:51 +0300

obnam (1.9-1) unstable; urgency=low

  * Update debian/copyright years. Thanks to Jan Niggemann.
  * Add build and runtime dependencies on python-yaml, since it is now
    needed by the "simple" format.

 -- Lars Wirzenius <liw@liw.fi>  Sun, 22 Mar 2015 16:20:31 +0200

obnam (1.8-1) unstable; urgency=low

  * New upstream version.
    - "obnam excludes files with "syslog" in the name without me
      specifying it" (Closes: #682667)
    - "obnam: client not found, but cannot remove lock" (Closes: #675825)
    - "data leak during restore" (Closes: #745112)

 -- Lars Wirzenius <liw@liw.fi>  Tue, 13 May 2014 08:04:18 +0100

obnam (1.7.4-1) unstable; urgency=low

  * New upstream release.
    * Fix "several consecutive runs back up unmodified files" 
      (Closes: #742384)
    * Fix "obnam mount fails to retrieve files over 64KB (obnam restore
      works fine)" again. (Closes: #741968)
  * debian/control: Increase build-dependency on cmdtest to 0.12 so
    that yarn will not fail when a test creates an unreadable file.
  * debian/rules: No longer run cmdtests, since they no longer exist.
  * debian/control: Add build-dependency on texlive-lang-german, for the
    German translation of the manual.

 -- Lars Wirzenius <liw@liw.fi>  Tue, 01 Apr 2014 11:03:18 +0100

obnam (1.7.2-1) unstable; urgency=low

  * New upstream release.
    * Fix "obnam mount fails to retrieve files over 64KB (obnam restore
      works fine)" (Closes: #741968)
  * Fix "typo in debian/control: s/Uploader/Uploaders/" (Closes: #729347)
  * Drop dependency on python-yaml, since yaml is no longer used.
  * Drop python-coverage-test-runner build-dependency to 0.8, which is