@@ -4,7 +4,7 @@
 
 override_dh_auto_build:
 	dh_auto_build
-	make -C manual
+	make -C manual html
 
 override_dh_auto_test:
 	python setup.py build_ext -i
